<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">raihan_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_marvin_mcfadden">Marvin McFadden</string>
<string name="lbl_marketing">Marketing</string>
<string name="lbl_supervisior">Supervisior</string>
<string name="lbl_back">Back</string>
<string name="lbl_aktif">Aktif</string>
<string name="lbl_project">Project</string>
<string name="lbl_nama_pasangan">Nama Pasangan</string>
<string name="lbl_haley_james">Haley James</string>
<string name="lbl_detail_divisi">Detail Divisi</string>
<string name="lbl_home">Home</string>
<string name="lbl_10_pegawai">10 Pegawai</string>
<string name="lbl_data_anak">Data Anak</string>
<string name="lbl_masuk">Masuk</string>
<string name="lbl_5_divisi">5 Divisi</string>
<string name="lbl_pelajar">Pelajar</string>
<string name="lbl_pegawai">Pegawai</string>
<string name="lbl_anak_ke_1">Anak ke 1</string>
<string name="lbl_list_divisi">List Divisi</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_100_pegawai">100 Pegawai</string>
<string name="lbl_brooke_davis">Brooke Davis</string>
<string name="lbl_no_telp">No. Telp</string>
<string name="lbl_cari">Cari</string>
<string name="lbl_tetap">TETAP</string>
<string name="lbl_network_expand">Network Expand</string>
<string name="lbl_7_pegawai">7 Pegawai</string>
<string name="lbl_jamie_scott">Jamie Scott</string>
<string name="lbl_nama_divisi">Nama Divisi</string>
<string name="lbl_nathan_scott">Nathan Scott</string>
<string name="lbl_04_maret_2022">04 Maret 2022</string>
<string name="lbl_bekerja">Bekerja</string>
<string name="lbl_nama_anak">Nama Anak</string>
<string name="lbl_5_pegawai">5 Pegawai</string>
<string name="lbl_username">Username</string>
<string name="lbl_divisi">Divisi</string>
<string name="lbl_antwon_taylor">Antwon Taylor</string>
<string name="lbl_status_anak">Status Anak</string>
<string name="lbl_keterangan_anak">Keterangan Anak</string>
<string name="lbl_tanggal_masuk">Tanggal Masuk</string>
<string name="lbl_human_relation">Human Relation</string>
<string name="lbl_2_project">2 Project</string>
<string name="lbl_email">Email</string>
<string name="lbl_nama_project">Nama Project</string>
<string name="lbl_bagan_login">Bagan Login</string>
<string name="lbl_dashboard">Dashboard</string>
<string name="lbl_nama_pegawai">Nama Pegawai</string>
<string name="lbl_search">Search</string>
<string name="msg_brooke_davis_sa">Brooke.davis@safircorp.ac.id</string>
<string name="lbl_list_pegawai">List Pegawai</string>
<string name="lbl_network">Network</string>
<string name="lbl_082317155099">082317155099</string>
<string name="lbl_detail_pegawai">Detail Pegawai</string>
<string name="lbl_anak">Anak</string>
<string name="lbl_andre">Andre</string>
<string name="msg_nama_kepala_div">Nama Kepala Divisi</string>
<string name="lbl_safir_corp">Safir Corp.</string>
<string name="lbl_status_pasangan">Status Pasangan</string>
<string name="lbl_04_januari_1990">04 Januari 1990</string>
<string name="msg_research_deve">Research &amp; Development</string>
<string name="lbl_harian">Harian</string>
<string name="lbl_mingguan">Mingguan</string>
<string name="lbl_pasangan">Pasangan</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_service_desk">Service Desk</string>
<string name="lbl_password">Password</string>
<string name="lbl_data_pasangan">Data Pasangan</string>
<string name="lbl_alice">Alice</string>
<string name="lbl_status">Status</string>
<string name="lbl_peyton_sawyer">Peyton Sawyer</string>
<string name="lbl_detail_project">Detail Project</string>
<string name="lbl_tanggal_lahir">Tanggal Lahir</string>
<string name="lbl_list_project">List Project</string>
<string name="lbl_jake_jagielski">Jake Jagielski</string>
<string name="lbl_4_pegawai">4 Pegawai</string>
<string name="lbl_0882_3221_2343">0882 3221 2343</string>
<string name="msg_detail_pegawai">Detail Pegawai One</string>
</resources>
