<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearListItem"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageButton
            android:background="@drawable/rectangle_bg_blue_50_radius_16"
            android:id="@+id/btnUser"
            android:layout_height="@dimen/_40pxh"
            android:layout_width="@dimen/_40pxh"
            android:scaleType="fitCenter"
            android:src="@drawable/img_user" tools:ignore="ContentDescription"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearContent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_weight="0.7" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtTitle"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_haley_james"
                style="@style/txtInterbold12" tools:text="@string/lbl_haley_james"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_marketing"
                style="@style/txtInterregular12" tools:text="@string/lbl_marketing"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnTetap"
            android:layout_height="@dimen/_22pxv"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="@dimen/_48pxh"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_6pxh"
            android:paddingStart="@dimen/_6pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@string/lbl_tetap" android:textAllCaps="true"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_tetap"/>
    </LinearLayout>
</layout>
