<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dataPasanganVM" type="com.raihansapplication.app.modules.datapasangan.data.viewmodel.DataPasanganVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearDataPasangan"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_1pxh"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp" style="@style/groupStylewhite_A700">
            <LinearLayout android:id="@+id/linearRowedit"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.92"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/linearBack"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.38"
                        android:layout_width="0dp" android:orientation="vertical">
                        <ImageView android:id="@+id/imageArrowleft"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_12pxh"
                            android:layout_marginEnd="@dimen/_66pxh"
                            android:layout_marginStart="@dimen/_7pxh"
                            android:layout_width="@dimen/_15pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_arrowleft"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtRightButton"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_60pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@{dataPasanganVM.dataPasanganModel.txtRightButton}"
                            style="@style/txtIntersemibold12" tools:text="@string/lbl_back"/>
                    </LinearLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPageTitle"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_weight="0.62"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{dataPasanganVM.dataPasanganModel.txtPageTitle}"
                        style="@style/txtInterextrabold20" tools:text="@string/lbl_data_pasangan"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageEdit"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_74pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_edit"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_edit"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:ellipsize="end" android:id="@+id/txtTitle"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataPasanganVM.dataPasanganModel.txtTitle}"
            style="@style/txtInterregular14" tools:text="@string/lbl_nama_pasangan"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDescription"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataPasanganVM.dataPasanganModel.txtDescription}"
            style="@style/txtInterregular12" tools:text="@string/lbl_alice"/>
        <View android:background="@color/bluegray_100"
            android:id="@+id/lineDivider"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_21pxv" android:layout_width="@dimen/_343pxh"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTitleOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataPasanganVM.dataPasanganModel.txtTitleOne}"
            style="@style/txtInterregular14" tools:text="@string/lbl_no_telp"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDescriptionOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataPasanganVM.dataPasanganModel.txtDescriptionOne}"
            style="@style/txtInterregular12" tools:text="@string/lbl_0882_3221_2343"/>
        <View android:background="@color/bluegray_100"
            android:id="@+id/lineDividerOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_343pxh"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTitleTwo"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataPasanganVM.dataPasanganModel.txtTitleTwo}"
            style="@style/txtInterregular14" tools:text="@string/lbl_status_pasangan"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDescriptionTwo"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataPasanganVM.dataPasanganModel.txtDescriptionTwo}"
            style="@style/txtInterregular12" tools:text="@string/lbl_bekerja"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearListItem"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearContent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_weight="0.96" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTitleThree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{dataPasanganVM.dataPasanganModel.txtTitleThree}"
                    style="@style/txtInterregular14" tools:text="@string/lbl_anak"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDescriptionThree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{dataPasanganVM.dataPasanganModel.txtDescriptionThree}"
                    style="@style/txtInterregular12" tools:text="@string/lbl_andre"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageArrowright"
                android:layout_height="@dimen/_12pxh"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="@dimen/_12pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowright"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
        </LinearLayout>
        <View android:background="@color/bluegray_100"
            android:id="@+id/lineDividerTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_18pxv" android:layout_width="@dimen/_343pxh"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearTabbar"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_312pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearHomeButton"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_27pxv"
                android:layout_marginEnd="@dimen/_163pxh"
                android:layout_marginStart="@dimen/_163pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_500_47cornerRadius">
                <ImageView android:id="@+id/imageHome"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtTabName"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{dataPasanganVM.dataPasanganModel.txtTabName}"
                    style="@style/txtIntersemibold10" tools:text="@string/lbl_home"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
