<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dataAnakVM" type="com.raihansapplication.app.modules.dataanak.data.viewmodel.DataAnakVM"/>
    </data>
    <LinearLayout android:id="@+id/linearDataAnak"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_1pxh"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp" style="@style/groupStylewhite_A700">
            <LinearLayout android:id="@+id/linearRowedit"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.91"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/linearBack"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.52"
                        android:layout_width="0dp" android:orientation="vertical">
                        <ImageView android:id="@+id/imageArrowleft"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_12pxh"
                            android:layout_marginEnd="@dimen/_89pxh"
                            android:layout_marginStart="@dimen/_7pxh"
                            android:layout_width="@dimen/_15pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_arrowleft"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtRightButton"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_83pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@{dataAnakVM.dataAnakModel.txtRightButton}"
                            style="@style/txtIntersemibold12" tools:text="@string/lbl_back"/>
                    </LinearLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPageTitle"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_weight="0.48"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{dataAnakVM.dataAnakModel.txtPageTitle}"
                        style="@style/txtInterextrabold20" tools:text="@string/lbl_data_anak"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageEdit"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_85pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_edit"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_edit"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:ellipsize="end" android:id="@+id/txtTitle"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataAnakVM.dataAnakModel.txtTitle}"
            style="@style/txtInterregular14" tools:text="@string/lbl_nama_anak"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDescription"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataAnakVM.dataAnakModel.txtDescription}"
            style="@style/txtInterregular12" tools:text="@string/lbl_andre"/>
        <View android:background="@color/bluegray_100"
            android:id="@+id/lineDivider"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_343pxh"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTitleOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataAnakVM.dataAnakModel.txtTitleOne}"
            style="@style/txtInterregular14" tools:text="@string/lbl_keterangan_anak"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDescriptionOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataAnakVM.dataAnakModel.txtDescriptionOne}"
            style="@style/txtInterregular12" tools:text="@string/lbl_anak_ke_1"/>
        <View android:background="@color/bluegray_100"
            android:id="@+id/lineDividerOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_343pxh"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTitleTwo"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataAnakVM.dataAnakModel.txtTitleTwo}"
            style="@style/txtInterregular14" tools:text="@string/lbl_status_anak"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDescriptionTwo"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{dataAnakVM.dataAnakModel.txtDescriptionTwo}"
            style="@style/txtInterregular12" tools:text="@string/lbl_pelajar"/>
        <View android:background="@color/bluegray_100"
            android:id="@+id/lineDividerTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_18pxv" android:layout_width="@dimen/_343pxh"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearTabbar"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_386pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearHomeButton"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_27pxv"
                android:layout_marginEnd="@dimen/_163pxh"
                android:layout_marginStart="@dimen/_163pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_500_47cornerRadius">
                <ImageView android:id="@+id/imageHome"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtTabName"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{dataAnakVM.dataAnakModel.txtTabName}"
                    style="@style/txtIntersemibold10" tools:text="@string/lbl_home"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
